--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
     ansi:
       enabled: always
 
+  datasource:
+    hikari:
+      auto-commit: false
+
   jpa:
     properties:
       hibernate:
